--- a/layout/layoutadmin/loaihang.html
+++ b/layout/layoutadmin/loaihang.html
@@ -28,35 +28,35 @@
                 <h1>THÊM MỚI LOẠI HÀNG HÓA</h1>
             </div>
             <div class="row formcontent">
-                <div>
-                    <table class="row mb10 formdsloai">
-                        <!-- Cột -->
+                <div class="row mb10 formdsloai">
+                    <table >
+                        <!-- tr Cột -->
                         <tr>
-                            <!-- Hàng -->
+                            <!-- th-td Hàng -->
                             <th></th>
                             <th>Mã Loại</th>
                             <th>Tên Loại</th>
                             <th></th>
                         </tr>
-                        <!-- Cột -->
+                        <!-- tr Cột -->
                         <tr>
-                            <!-- Hàng -->
+                            <!-- th-td Hàng -->
+                            <td><input type="checkbox" name="" id=""></td>
+                            <td>001</td>
+                            <td>Đồng Hồ</td>
+                            <td><input type="button" name="" value="sửa" id=""> <input type="button" value="xóa" name="" id=""></td>
+                        </tr>
+                        <!-- tr Cột -->
+                        <tr>
+                            <!-- th-td Hàng -->
                             <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
                         </tr>
-                        <!-- Cột -->
+                        <!-- tr Cột -->
                         <tr>
-                            <!-- Hàng -->
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <!-- Cột -->
-                        <tr>
-                            <!-- Hàng -->
+                            <!-- th-td Hàng -->
                             <td></td>
                             <td></td>
                             <td></td>
