--- a/css/style.css
+++ b/css/style.css
@@ -259,8 +259,32 @@
 
 .formdsloai table{
     width: 100%;
+    border-collapse: collapse;
+    border: 1px #999 solid;
 }
 
+.formdsloai table th:nth-child(1){
+    width: 10%;
+    padding: 20px;
+    background-color: #CCC;
+}
+.formdsloai table th:nth-child(2){
+    width: 30%;
+    background-color: #CCC;
+}
+.formdsloai table th:nth-child(3){
+    width: 40%;
+    background-color: #CCC;
+}
+.formdsloai table th:nth-child(4){
+    width: 20%;
+    background-color: #CCC;
+}
+
+.formdsloai table td{
+    padding: 10px 20px;
+    border: 1px #CCC solid;
+}
 
 
 
