--- a/layout/layoutadmin/hanghoa.html
+++ b/layout/layoutadmin/hanghoa.html
@@ -25,25 +25,35 @@
         </div>
         <div class="row">
             <div class="row formtitle">
-                <h1>Bảng Loại Hàng</h1>
+                <h1>Bảng Hàng Hóa</h1>
             </div>
             <div class="row formcontent">
-                <div class="row mb10 formdsloai">
+                <div class="row mb10 formhanghoa">
                     <table>
                         <!-- tr Cột -->
                         <tr>
                             <!-- th-td Hàng -->
                             <th></th>
+                            <th class="ma_hh">Mã Hàng Hóa</th>
+                            <th>Tên hàng hóa</th>
+                            <th>Giá</th>
+                            <th>Hình Ảnh</th>
+                            <th>Ngày nhập</th>
+                            <th>Mô tả</th>
                             <th>Mã Loại</th>
-                            <th>Tên Loại</th>
                             <th></th>
                         </tr>
                         <!-- tr Cột -->
                         <tr>
                             <!-- th-td Hàng -->
                             <td><input type="checkbox" name="" id=""></td>
+                            <td class="ma_hh">001</td>
+                            <td>Đồng Hồ Apple watch</td>
+                            <td>500$</td>
+                            <td><img src="/image/1.jpg" alt=""></td>
+                            <td>1/2/2024</td>
+                            <td>Hàng chất lượng cao</td>
                             <td>001</td>
-                            <td>Đồng Hồ</td>
                             <td><input type="button" name="" value="sửa" id=""> <input type="button" value="xóa" name=""
                                     id=""></td>
                         </tr>
@@ -51,8 +61,13 @@
                         <tr>
                             <!-- th-td Hàng -->
                             <td><input type="checkbox" name="" id=""></td>
+                            <td class="ma_hh">002</td>
+                            <td>IPhone 15 Promax</td>
+                            <td>1000$</td>
+                            <td><img src="/image/1.jpg" alt=""></td>
+                            <td>1/2/2024</td>
+                            <td>Hàng chất lượng cao</td>
                             <td>002</td>
-                            <td>Điện Thoại</td>
                             <td><input type="button" name="" value="sửa" id=""> <input type="button" value="xóa" name=""
                                     id=""></td>
                         </tr>
@@ -60,8 +75,13 @@
                         <tr>
                             <!-- th-td Hàng -->
                             <td><input type="checkbox" name="" id=""></td>
+                            <td class="ma_hh">003</td>
+                            <td>Loa bluetoot</td>
+                            <td>800$</td>
+                            <td><img src="/image/1.jpg" alt=""></td>
+                            <td>1/2/2024</td>
+                            <td>Hàng chất lượng cao</td>
                             <td>003</td>
-                            <td>Loa</td>
                             <td><input type="button" name="" value="sửa" id=""> <input type="button" value="xóa" name=""
                                     id=""></td>
                         </tr>
@@ -71,7 +91,7 @@
                     <input type="button" value="Chọn tất cả" id="">
                     <input type="button" value="Bỏ chọn tất cả" id="">
                     <input type="button" value="Xóa mục đã chọn" id="">
-                    <a href="addloaihang.html"><input type="button" value="Thêm mới" id=""></a>
+                    <a href="addhanghoa.html"><input type="button" value="Thêm mới" id=""></a>
                 </div>
             </div>
         </div>
