--- a/layout/layoutadmin/addhanghoa.html
+++ b/layout/layoutadmin/addhanghoa.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row mb menu">
             <ul>
-                <li><a href="">Trang chủ</a></li>
+                <li><a href="addloaihang.html">Trang chủ</a></li>
                 <li><a href="">Danh Mục</a></li>
                 <li><a href="hanghoa.html">Hàng Hóa</a></li>
                 <li><a href="">Khách Hàng</a></li>
@@ -25,12 +25,12 @@
         </div>
         <div class="row">
             <div class="row formtitle">
-                <h1>THÊM MỚI LOẠI HÀNG HÓA</h1>
+                <h1>THÊM MỚI HÀNG HÓA</h1>
             </div>
             <div class="row formcontent">
                 <form action="" method="post">
                     <div class="row mb10">
-                        Mã Loại <br>
+                        Mã Hàng Hóa <br>
                         <input type="text" name="maloai" id="" disabled>
                     </div>
                     <div class="row mb10">
@@ -38,9 +38,25 @@
                         <input type="text" name="tenloai" id="">
                     </div>
                     <div class="row mb10">
+                        Giá <br>
+                        <input type="text" name="tenloai" id="">
+                    </div>
+                    <div class="row mb10">
+                        Hình ảnh <br>
+                        <input type="text" name="tenloai" id="">
+                    </div>
+                    <div class="row mb10">
+                        Ngày nhập <br>
+                        <input type="date" name="tenloai" id="">
+                    </div>
+                    <div class="row mb10">
+                        Mã Loại <br>
+                        <input type="text" name="tenloai" id="">
+                    </div>
+                    <div class="row mb10">
                         <input type="submit" value="Thêm mới" id="">
                         <input type="reset" value="Reset" id="">
-                        <a href="loaihang.html"><input type="button" value="Danh sách" id=""></a>
+                        <a href="hanghoa.html"><input type="button" value="Danh sách" id=""></a>
                     </div>
                 </form>
             </div>
